--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <LINK REL="SHORTCUT ICON" HREF="https://www.lentopalloerotuomarit.fi/lupaus/favicon.ico" />
+
     <title>Lupaus</title>
     <meta name="description" content="Lupaus">
     <meta name="author" content="Jori Ostrovskij">
