--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <LINK REL="SHORTCUT ICON" HREF="https://www.lentopalloerotuomarit.fi/lupaus/favicon.ico" />
+    <link rel="shortcut icon" href="http://www.lentopalloerotuomarit.fi/lupaus/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="http://www.lentopalloerotuomarit.fi/lupaus/favicon.ico" type="image/x-icon">
+
 
     <title>Lupaus</title>
     <meta name="description" content="Lupaus">
@@ -45,7 +47,7 @@
 
         <div class="tab-content">
             <div id="etusivu" class="tab-pane fade in active">
-                <h1>Lupaus</h1>
+                <h1> <img src="lock.png"> Lupaus</h1>
 
                 <h3>Pelaajat</h3>
                 <div v-for="pelaaja in pelaajat">
@@ -64,7 +66,7 @@
                     </div>
 
             <div id="sivu1" class="tab-pane">
-                <div>
+                <div style="margin-top: 8px">
                     <button class="btn btn-danger btn-sm" @click="edellinen()">&lt;&lt;</button>
                     <button class="btn btn-success btn-lg" @click="seuraava()">&gt;&gt;</button>
                     <span style="font-size: 16px; margin-left: 50px;">Kierros: {{kierros}}</span>
